--- a/application/home/view/label/label.html
+++ b/application/home/view/label/label.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="gbk">
 <title>个人博客 - 一个技术员个人博客网站</title>
+
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="/static/home/css/base.css" rel="stylesheet">
 <link href="/static/home/css/index.css" rel="stylesheet">
@@ -25,7 +26,7 @@
     {foreach $data as $v} 
         <li>
           <div class="tpic"><img src="{$v.sml}"></div>
-          <b>{$v.title}</b><span>{$v.description}</span><a href="/h_content/{$v.id}" class="readmore">阅读原文</a></li>
+          <b>{$v.title}</b><span>{$v.description}</span><a href="/home_content/{$v.id}" class="readmore">阅读原文</a></li>
     {/foreach}
       </ul>
     </div>
