--- a/application/home/view/common/footer.html
+++ b/application/home/view/common/footer.html
@@ -2,19 +2,20 @@
         <div class="footer">
           <div class="wxbox">
             <ul>
-              <li><img src="/static/home/images/grwx.png"><span>我的微信</span></li>
-              <li><img src="/static/home/images/wx.jpg"><span>微信公众号</span></li>
+              <li><img src="/static/home/images/wdwx.jpg"><span>我的微信</span></li>
             </ul>
           </div>
           <div class="bzjj">
             <h2>本站简介</h2>
             <p>Wyafana的博客</p>
+            <p>本人是一个入坑一年半的小开发</p>
+            <p>经常沉迷于学习忘记了时间</p>
           </div>
           <div class="other">
             <h2>网站版权</h2>
             <p>未经授权禁止转载、摘编、复制或建立镜像，如有违反，追究法律责任。举报邮箱：wyf1950196@163.com</p>
             <p>&nbsp;</p>
-            <p>备案号：</p>
+            <p>备案号：冀ICP备18036697号</p>
           </div>
         </div>
       </footer>
