--- a/application/home/view/common/right.html
+++ b/application/home/view/common/right.html
@@ -37,7 +37,7 @@
             <ul>
               {foreach $data_h['label_data'] as $v}
               <li>
-                
+                  <img src="" alt="">
                   <a href="/home/Index/label?label=<?php echo base64_encode($v->label) ?>">{$v->label}</a>
                   <!-- <p>{$v->label}</p> -->
 
@@ -45,3 +45,5 @@
               {/foreach}
             </ul>
           </div>
+
+
